force-app/main/default/objects/ActualAmount__c/ActualAmount__c.object-meta.xml
<CustomObject>
    <label>実績</label>
    <nameField>
        <label>実績名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>