force-app/main/default/objects/ActualAmount__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>予算</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>実績</relationshipLabel>
    <relationshipName>ActualAmount</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>