force-app/main/default/objects/ActualAmount__c/fields/BudgetAndActuals__c.field-meta.xml
<CustomField>
    <fullName>BudgetAndActuals__c</fullName>
    <label>予算と実績</label>
    <referenceTo>BudgetAndActuals__c</referenceTo>
    <relationshipLabel>実績</relationshipLabel>
    <relationshipName>ActualAmount</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>